# secret-santa

./: .gitignore  copines.txt  generateur_noel_surprise_py.py  lesGens.txt.sample  mail_config.json.example  mail_config.json.sample  mail_test.html  people_emails.json  pyproject.toml  santa.py  travail.txt
secret_santa/: chain_saver.py  cli.py  notice.py  people.py  utils.py  utils_email.py
src/: santa.py
src/santa/: display.py  humans.py  mail.py  secret.py
templates/: email.html.j2  message.j2
