[tool.poetry]
name = "secret_santa"
version = "0.1.0"
description = "Générateur de Père Noël surprise"
authors = ["François Weber <f.weber@qwant.com>"]
readme = "README.md"
packages = [
    { include = "secret_santa" }
]


[tool.poetry.dependencies]
python = ">=3.9"
click = "^8.1.3"
tqdm = "^4.64.1"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
